# GenSci_Development

./: README.md  cli  notebook.ipynb  notes.txt  pyproject.toml
data_folds/: notes.txt
mocked/: grid_data.py  organism.json
scripts/: tools.py
sequences/: notes.txt  scrapys.py
